@@ -18,6 +18,16 @@ $Id$
 		for 'next personal'.  
 	Updated examples/owlconf.erik with the above.
 	Fixed the annoying pagedown sometimes-not-working bug.
+	Made owl_function_fast*filt return a string and not do the 
+	        narrowing, to make it more general.
+	Added a smartfilter command that creates a filter
+	        based on the current message and returns the name
+		of the filter.
+	Added --smart-filter and --smart-filter-instance options 
+	        to the next and prev commands.
+	Added M-C-n and M-C-p keybindings to "move to next message 
+	        matching current" and "move to previous message 
+		matching current"
 	
 1.2.0-pre-erikdevel-17
 	Integrated change to fix problem with popup blinking on new zephyrs.
